--- a/src/app/modules/developer/Components/booking-list/booking-list.component.html
+++ b/src/app/modules/developer/Components/booking-list/booking-list.component.html
@@ -60,7 +60,7 @@
     
                   <div class="col-sm-6 col-md-4">
                     <span class="text-muted">Session Price</span>
-                    <h6 class="mb-0 mt-1">{{ booking.Total }} LE</h6>
+                    <h6 class="mb-0 mt-1">$ {{ booking.Total }}</h6>
                   </div>
     
                   <div class="col-md-4">
@@ -118,7 +118,7 @@
     
                   <div class="col-sm-6 col-md-4">
                     <span class="text-muted">Session Price</span>
-                    <h6 class="mb-0 mt-1">{{ booking.Total }} LE</h6>
+                    <h6 class="mb-0 mt-1">$ {{ booking.Total }}</h6>
                   </div>
     
                   <div class="col-md-4">
@@ -175,7 +175,7 @@
     
                   <div class="col-sm-6 col-md-4">
                     <span class="text-muted">Session Price</span>
-                    <h6 class="mb-0 mt-1">{{ booking.Total }} LE</h6>
+                    <h6 class="mb-0 mt-1">$ {{ booking.Total }}</h6>
                   </div>
     
                   <div class="col-md-4">
