--- a/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.html
+++ b/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.html
@@ -81,7 +81,7 @@
                               <span class="text-dark text-muted">{{sessiondetails?.Duration}} Hour</span>
                               <br>
                               Price:
-                              <span class="text-dark text-muted">{{sessiondetails?.Price}} EGP</span>
+                              <span class="text-dark text-muted">$ {{sessiondetails?.Price}}</span>
                               <br>
                               <!-- <br>
                                Meeting Link:
