--- a/src/app/modules/mentor/Components/session-details/session-details.component.html
+++ b/src/app/modules/mentor/Components/session-details/session-details.component.html
@@ -79,7 +79,7 @@
                               <span class="text-dark text-muted">{{sessiondetails.Duration}} Hour</span>
                               <br>
                               Price:
-                              <span class="text-dark text-muted">{{sessiondetails.Price}} EGP</span>
+                              <span class="text-dark text-muted">$ {{sessiondetails.Price}}</span>
                               <br>
                            </p>
                         </div>
@@ -99,7 +99,7 @@
                               <br>
                               {{sessiondetails.UserTitle}}
                            </p>
-                           <a [routerLink]="['/developers',sessiondetails.UserId]">View Profile</a>
+                           <a [routerLink]="['/mentor/developers',sessiondetails.UserId]">View Profile</a>
                         </div>
                      </div>
 
