--- a/src/app/modules/developer/Components/booking-confirmation/booking-confirmation.component.html
+++ b/src/app/modules/developer/Components/booking-confirmation/booking-confirmation.component.html
@@ -67,7 +67,7 @@
                                 <li class="list-group-item d-sm-flex justify-content-between align-items-center">
                                     <span class="mb-0 muted"><i class="bi bi-currency-dollar fa-fw me-2"></i>Total
                                         Price:</span>
-                                    <span class="h6 fw-normal mb-0">{{sessiondetails?.Price}} EGP</span>
+                                    <span class="h6 fw-normal mb-0">$ {{sessiondetails?.Price}}</span>
                                 </li>
                             </ul>
                         </div>
