--- a/src/app/modules/developer/Components/developerlist/developerlist.component.html
+++ b/src/app/modules/developer/Components/developerlist/developerlist.component.html
@@ -14,7 +14,7 @@
                 <div class="rounded-top-3"
                   style="background-image: url(mentor-single.png ); background-position: center; background-size: cover; background-repeat: no-repeat; height: 228px">
                 </div>
-                <div class="card-body p-md-5" style="height:auto;">
+                <div class="card-body  " style="height:auto;">
                   <div class="d-flex flex-column gap-5 ">
                     <!--img-->
                     <div class="mt-n8 mb-0" style="height: 0px;">
@@ -23,7 +23,7 @@
                         onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default1.png';">
                       <!-- <img src="avatar-2.jpg" alt="developer 1" class="img-fluid rounded-4 mt-n8"> -->
                     </div>
-                    <div class="d-flex flex-column gap-5 mb-5 custom-gap gap-sm-3">
+                    <div class="d-flex flex-column gap-5  custom-gap gap-sm-3">
                       <div class="d-flex flex-column custom-gap gap-3">
                         <div class="d-flex  flex-column  justify-content-between gap-2">
                           <!--heading-->
@@ -32,7 +32,7 @@
                               {{developerProfile?.LastName}}</h1>
                             <!--content-->
                             <div class="d-flex justify-content-between  gap-2">
-                              <p class="fw-medium text-gray-800">({{ developerProfile?.Title }})</p>
+                              <p class="fw-medium text-gray-800">{{ developerProfile?.Title }}</p>
                               <div class="d-flex flex-lg-row   gap-5">
                                 <small class="fw-medium text-success mt-2">{{ developerProfile?.YearsOfExperience }}yrs
                                   Exp</small>
@@ -48,14 +48,14 @@
                                   </span>
                                   <!--text-->
                                   <!-- <span>Gujarat,India</span> -->
-                                  <span>{{developerProfile.Country}}</span>
+                                  <span style="margin-right: 20px;">{{developerProfile.Country}}</span>
                                 </div>
                               </div>
                             </div>
   
                           </div>
   
-                          <h6 class="mb-0 mt-3">About</h6>
+                          <h5 class="mb-0 mt-3">About</h5>
                           <div class="d-flex flex-column">
                             <!--para-->
                             <p class="mb-1">
@@ -70,11 +70,11 @@
   
                           <div class="d-flex flex-column gap-3">
   
-                            <h6 class="mb-0 mt-3">Skills</h6>
+                            <h5 class="mb-0 mt-3">Skills</h5>
   
                             <div class="gap-2 d-flex flex-wrap">
   
-                              <div class="developer-skills col-12 mb-0 mt-3" style="height: 30px;">
+                              <div class="developer-skills col-12 mb-0 mt-3" >
                                 <div *ngFor="let skill of developerProfile.Skills" class="skill-circle">
                                   {{ skill }}
                                 </div>
@@ -105,7 +105,7 @@
                 <div class="rounded-top-3"
                   style="background-image: url(mentor-single.png ); background-position: center; background-size: cover; background-repeat: no-repeat; height: 228px">
                 </div>
-                <div class="card-body p-md-5" style="height:auto;">
+                <div class="card-body  " style="height:auto;">
                   <div class="d-flex flex-column gap-5 ">
                     <!--img-->
                     <div class="mt-n8 mb-0" style="height: 0px;">
@@ -114,7 +114,7 @@
                         onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default1.png';">
                       <!-- <img src="avatar-2.jpg" alt="developer 1" class="img-fluid rounded-4 mt-n8"> -->
                     </div>
-                    <div class="d-flex flex-column gap-5 mb-5 custom-gap gap-sm-3">
+                    <div class="d-flex flex-column gap-5  custom-gap gap-sm-3">
                       <div class="d-flex flex-column custom-gap gap-3">
                         <div class="d-flex  flex-column  justify-content-between gap-2">
                           <!--heading-->
@@ -146,7 +146,7 @@
   
                           </div>
   
-                          <h6 class="mb-0 mt-3">About</h6>
+                          <h5 class="mb-0 mt-3">About</h5>
                           <div class="d-flex flex-column">
                             <!--para-->
                             <p class="mb-1">
@@ -161,7 +161,7 @@
   
                           <div class="d-flex flex-column gap-3">
   
-                            <h6 class="mb-0 mt-3">Skills</h6>
+                            <h5 class="mb-0 mt-3">Skills</h5>
   
                             <div class="gap-2 d-flex flex-wrap">
   
@@ -190,7 +190,7 @@
   
             <div *ngIf="developerProfile?.Educations?.length > 0" class="card mb-4">
               <div class="profile-section">
-                <h2 class="fw-bold">Education</h2>
+                <h5 class=" ">Education</h5>
                 <div>
                   <!-- Corrected *ngFor directive -->
                   <div *ngFor="let education of getLimitedEducations(developerProfile?.Educations);"
@@ -222,7 +222,7 @@
             </div>
             <div *ngIf="developerProfile?.Experiences?.length > 0" class="card mb-4">
               <div class="profile-section">
-                <h2 class="fw-bold">Work Experience</h2>
+                <h5 class=" ">Work Experience</h5>
                 <div>
                   <!-- Corrected *ngFor directive -->
                   <div *ngFor="let experience of getLimitedExperiences(developerProfile.Experiences);"
@@ -264,7 +264,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2 class="mb-4">Similar developers</h2>
+              <h5 class="mb-4">Similar developers</h5>
             </div>
           </div>
           <div class="row gy-4 justify-content-sm-center">
@@ -284,9 +284,9 @@
                     <div class="d-flex flex-column gap-2">
                       <div>
                         <div class="d-flex align-items-center gap-2">
-                          <h3 class="mb-0">
+                          <h5 class="mb-0">
                             <a [routerLink]="['/developers',developer.ID]" class="text-reset">{{developer.FirstName}} {{developer.LastName}}</a>
-                          </h3>
+                          </h5>
                           <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                               class="bi bi-patch-check-fill text-success" viewBox="0 0 16 16">
@@ -306,7 +306,7 @@
                             class="bi bi-star-fill text-warning" viewBox="0 0 16 16">
                             <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"></path>
                           </svg>
-                          <span class="fw-bold text-dark">{{developer.AverageRate}}</span>
+                          <span class="  text-dark">{{developer.AverageRate}}</span>
                           <span>({{developer.NumOfReviews}} Reviews)</span>
                         </div>
                       </div>
