--- a/src/app/modules/hr/Components/profile/profile.component.css
+++ b/src/app/modules/hr/Components/profile/profile.component.css
@@ -19,7 +19,8 @@
   }
   
   .card-body {
-    padding: 20px;
+    padding: 30px;
+    height: auto !important;
   }
   
   .form-control {
@@ -141,16 +142,17 @@
   }
   
   .profile-section {
-    margin: 20px;
+    margin: 10px;
     padding: 20px;
     /* background-color: #f9f9f9; */
     border-radius: 8px;
   }
   
-  .profile-section h2 {
-    font-size: 24px;
+  .profile-section h5 {
+    font-size: 22px;
     color: #333;
     margin-bottom: 15px;
+    font-weight: 500;
   }
   
   .education-item, .experience-item {
@@ -226,7 +228,7 @@
       font-size: 32px !important;
     }
     .card-body{
-      padding: 48px 20px  !important;
+      padding: 30px 30px  !important;
     }
   }
   @media (max-width:770px)  {
@@ -261,5 +263,23 @@
     justify-content: center !important;
   }
   }
-  
-  
+  @media (min-width:1115px) {
+    .col-xl-7{
+      width: 65%;
+    }
+    .col-xl-5{
+      width: 35%;
+    }
+  }
+  h5{
+    font-weight: 500;
+
+font-size:22px;
+
+line-height:30px;
+
+columns: rgb(30, 41, 59);
+
+font-style:normal;
+  }
+ 
