--- a/src/app/modules/hr/Components/profile/profile.component.html
+++ b/src/app/modules/hr/Components/profile/profile.component.html
@@ -5,7 +5,7 @@
         <!--row-->
         <div  class="row gy-4">
 
-          <div *ngIf="hrProfile?.Educations?.length > 0 ||hrProfile?.Experiences?.length > 0" class="col-xl-8 col-12">
+          <div *ngIf="hrProfile?.Educations?.length > 0 ||hrProfile?.Experiences?.length > 0" class="col-xl-7 col-12">
             <div class="d-flex flex-column gap-4" style="height: fit-content;">
               <!--card-->
               <div class="card" style="height: fit-content;">
@@ -13,7 +13,7 @@
                 <div class="rounded-top-3"
                   style="background-image: url(mentor-single.png ); background-position: center; background-size: cover; background-repeat: no-repeat; height: 228px">
                 </div>
-                <div class="card-body p-md-5" style="height: 300px;">
+                <div class="card-body" >
                   <div class="d-flex flex-column gap-5 ">
                     <!--img-->
                     <div class="mt-n8 mb-0" style="height: 0px;">
@@ -21,20 +21,41 @@
        onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default1.png';">
                       <!-- <img src="avatar-2.jpg" alt="hr 1" class="img-fluid rounded-4 mt-n8"> -->
                     </div>
-                    <div class="d-flex flex-column gap-5 mb-5 custom-gap gap-sm-3">
+                    <div class="d-flex flex-column gap-5 mb-2 custom-gap gap-sm-3">
                       <div class="d-flex flex-column custom-gap gap-3">
                         <div class="d-flex flex-md-row flex-sm-row flex-column custom-flex justify-content-between gap-2">
                           <!--heading-->
                           <div>
                             <h1 class="mb-0" style="font-size: 40PX;">{{ hrProfile?.FirstName }} {{hrProfile?.LastName}}</h1>
                             <!--content-->
-                            <div class="d-flex flex-lg-row  flex-column gap-2">
+                            <div class="d-flex justify-content-between  gap-5">
+                              <p class="fw-medium text-gray-800 me-lg-5">{{ hrProfile?.Title }}</p>
+                              <div class="d-flex flex-lg-row gap-5">
+                                <small class="fw-medium text-success mt-1">{{ hrProfile?.YearsOfExperience }}yrs
+                                  Exp</small>
+                                <div class="d-flex flex-row gap-2 align-items-center lh-1">
+                                  <!--icon-->
+                                  <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                                      class="bi bi-geo-alt-fill text-danger" viewBox="0 0 16 16">
+                                      <path
+                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6">
+                                      </path>
+                                    </svg>
+                                  </span>
+                                  <!--text-->
+                                  <!-- <span>Gujarat,India</span> -->
+                                  <span>{{hrProfile.Country}}</span>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- <div class="d-flex flex-lg-row  flex-column gap-2">
                               <small class="fw-medium text-gray-800">{{ hrProfile?.Title }}</small>
                               <small class="fw-medium text-success">{{ hrProfile?.YearsOfExperience }}yrs Exp</small>
-                            </div>
+                            </div> -->
                           </div>
                           <!--button-->
-                          <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
+                          <!-- <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
                             <a  [routerLink]="['/developer/booking/',id]"class="btn btn btn-outline-primary">
                              
                               <i class="fa-regular fa-handshake"></i>
@@ -42,7 +63,7 @@
                             </a>
                             <a   [routerLink]="['/developer/query/', id]" class="btn btn-outline-primary"><i class="fa-solid fa-circle-question"></i> Ask
                               Questions</a>
-                          </div>
+                          </div> -->
                         </div>
                         <div class="d-flex flex-md-row flex-column flex-sm-row custom-flex gap-md-4 gap-2">
                           <div class="d-flex flex-row gap-2 align-items-center lh-1">
@@ -79,17 +100,17 @@
                           </div>
                           <div class="d-flex flex-row gap-2 align-items-center lh-1">
                             <!--icon-->
-                            <span>
+                            <!-- <span>
                               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-geo-alt-fill text-danger" viewBox="0 0 16 16">
                                 <path
                                   d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6">
                                 </path>
                               </svg>
-                            </span>
+                            </span> -->
                             <!--text-->
                             <!-- <span>Gujarat,India</span> -->
-                            <span>{{hrProfile.Country}}</span>
+                            <!-- <span>{{hrProfile.Country}}</span> -->
                           </div>
                         </div>
                       </div>
@@ -111,9 +132,9 @@
               <div class="card">
                 <!--card body-->
                
-                <div class="card-body p-md-5 d-flex flex-column gap-3">
+                <div class="card-body  d-flex flex-column gap-3">
                   <!--heading-->
-                  <h3 class="mb-0">About</h3>
+                  <h5 class="mb-0">About</h5>
                   <div class="d-flex flex-column">
                     <!--para-->
                     <p class="mb-1">
@@ -131,14 +152,14 @@
               <!--card-->
               <div class="card">
                 <!--card body-->
-                <div class="card-body p-md-5">
-                  <div class="d-flex flex-column gap-3">
+                <div class="card-body " style="height: auto ;" >
+                  <div class="d-flex flex-column gap-3" >
                     <!--heading-->
-                    <h3 class="mb-0">Skills</h3>
+                    <h5 class="mb-0">Skills</h5>
   
                     <div class="gap-2 d-flex flex-wrap">
   
-                      <div class="hr-skills col-12 mb-0 mt-3" style="height: 30px;">
+                      <div class="hr-skills col-12 mb-0 mt-3" >
                         <div *ngFor="let skill of hrProfile.Skills" class="skill-circle">
                           {{ skill }}
                         </div>
@@ -151,11 +172,11 @@
               @if(hrReviews?.length>0){
               <div class="card">
                 <!--card body-->
-                <div class="card-body p-md-5">
+                <div class="card-body">
                   <div class="d-flex flex-md-row flex-column align-items-md-center justify-content-between gap-2">
                     <!--heading-->
                     <div>
-                      <h3 class="mb-0">What Developers Say</h3>
+                      <h5 class="mb-0">What Developers Say</h5>
                     </div>
                     <div>
                       <!--form-->
@@ -175,7 +196,7 @@
                             <img src="http://localhost:5164/{{review.Reviewer.Image}}" alt="avatar" class="avatar avatar-lg rounded-circle" onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default1.png';">
                           </div>
                           <div>
-                            <h6 class="mb-1">{{ review.Reviewer.FirstName }} {{ review.Reviewer.LastName }}</h6>
+                            <h5 class="mb-1">{{ review.Reviewer.FirstName }} {{ review.Reviewer.LastName }}</h5>
   
                             <div class="d-flex flex-md-row flex-column flex-sm-row custom-flex custom-gap gap-md-2 gap-sm-2 align-items-md-center lh-1">
                               <app-rate [value]="review.Rate" ></app-rate>
@@ -209,11 +230,11 @@
             }@else {
   
               <div class="card">
-                <div class="card-body p-md-5">
+                <div class="card-body">
                   <div class="d-flex flex-md-row flex-column align-items-md-center justify-content-between gap-2">
                     <!--heading-->
                     <div>
-                      <h3 class="mb-0">Not Rated yet</h3>
+                      <h5 class="mb-0">Not Rated yet</h5>
                     </div>
                   </div>
                 </div>
@@ -230,7 +251,7 @@
                     <div class="rounded-top-3"
                       style="background-image: url(mentor-single.png ); background-position: center; background-size: cover; background-repeat: no-repeat; height: 228px">
                     </div>
-                    <div class="card-body p-md-5" style="height: 300px;">
+                    <div class="card-body " >
                       <div class="d-flex flex-column gap-5 ">
                         <!--img-->
                         <div class="mt-n8 mb-0" style="height: 0px;">
@@ -238,7 +259,7 @@
            onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default1.png';">
                           <!-- <img src="avatar-2.jpg" alt="hr 1" class="img-fluid rounded-4 mt-n8"> -->
                         </div>
-                        <div class="d-flex flex-column gap-5 mb-5 custom-gap gap-sm-3">
+                        <div class="d-flex flex-column gap-5 mb-2 custom-gap gap-sm-3">
                           <div class="d-flex flex-column custom-gap gap-3">
                             <div class="d-flex flex-md-row flex-sm-row flex-column custom-flex justify-content-between gap-2">
                               <!--heading-->
@@ -251,7 +272,7 @@
                                 </div>
                               </div>
                               <!--button-->
-                              <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
+                              <!-- <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
                                 <a  [routerLink]="['/developer/booking/',id]"class="btn btn btn-outline-primary">
                                  
                                   <i class="fa-regular fa-handshake"></i>
@@ -259,7 +280,7 @@
                                 </a>
                                 <a   [routerLink]="['/developer/query/', id]" class="btn btn-outline-primary"><i class="fa-solid fa-circle-question"></i> Ask
                                   Questions</a>
-                              </div>
+                              </div> -->
                             </div>
                             <div class="d-flex flex-md-row flex-column flex-sm-row custom-flex gap-md-4 gap-2">
                               <div class="d-flex flex-row gap-2 align-items-center lh-1">
@@ -328,9 +349,9 @@
                   <div class="card">
                     <!--card body-->
                    
-                    <div class="card-body p-md-5 d-flex flex-column gap-3">
+                    <div class="card-body d-flex flex-column gap-3">
                       <!--heading-->
-                      <h3 class="mb-0">About</h3>
+                      <h5 class="mb-0">About</h5>
                       <div class="d-flex flex-column">
                         <!--para-->
                         <p class="mb-1">
@@ -348,14 +369,14 @@
                   <!--card-->
                   <div class="card">
                     <!--card body-->
-                    <div class="card-body p-md-5">
-                      <div class="d-flex flex-column gap-3">
+                    <div class="card-body ">
+                      <div class="d-flex flex-column gap-3" style="height: auto ;">
                         <!--heading-->
-                        <h3 class="mb-0">Skills</h3>
+                        <h5 class="mb-0">Skills</h5>
       
                         <div class="gap-2 d-flex flex-wrap">
       
-                          <div class="hr-skills col-12 mb-0 mt-3" style="height: 30px;">
+                          <div class="hr-skills col-12 mb-0 mt-3" >
                             <div *ngFor="let skill of hrProfile.Skills" class="skill-circle">
                               {{ skill }}
                             </div>
@@ -368,11 +389,11 @@
                   @if(hrReviews?.length>0){
                   <div class="card">
                     <!--card body-->
-                    <div class="card-body p-md-5">
+                    <div class="card-body ">
                       <div class="d-flex flex-md-row flex-column align-items-md-center justify-content-between gap-2">
                         <!--heading-->
                         <div>
-                          <h3 class="mb-0">What Developers Say</h3>
+                          <h5 class="mb-0">What Developers Say</h5>
                         </div>
                         <div>
                           <!--form-->
@@ -392,7 +413,7 @@
                                 <img src="http://localhost:5164/{{review.Reviewer.Image}}" alt="avatar" class="avatar avatar-lg rounded-circle" onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default1.png';">
                               </div>
                               <div>
-                                <h6 class="mb-1">{{ review.Reviewer.FirstName }} {{ review.Reviewer.LastName }}</h6>
+                                <h5 class="mb-1">{{ review.Reviewer.FirstName }} {{ review.Reviewer.LastName }}</h5>
       
                                 <div class="d-flex flex-md-row flex-column flex-sm-row custom-flex custom-gap gap-md-2 gap-sm-2 align-items-md-center lh-1">
                                   <app-rate [value]="review.Rate" ></app-rate>
@@ -426,11 +447,11 @@
                 }@else {
       
                   <div class="card">
-                    <div class="card-body p-md-5">
+                    <div class="card-body ">
                       <div class="d-flex flex-md-row flex-column align-items-md-center justify-content-between gap-2">
                         <!--heading-->
                         <div>
-                          <h3 class="mb-0">Not Rated yet</h3>
+                          <h5 class="mb-0">Not Rated yet</h5>
                         </div>
                       </div>
                     </div>
@@ -439,21 +460,21 @@
                 }
                 </div>
                 </div>
-              <div class="col-xl-4 col-12">
+              <div class="col-xl-5 col-12">
                
               <div *ngIf="hrProfile?.Educations?.length > 0" class="card mb-4">
                 <div class="profile-section">
-                  <h2 class="fw-bold">Education</h2>
+                  <h5 >Education</h5>
                   <div>
                     <!-- Corrected *ngFor directive -->
                     <div *ngFor="let education of getLimitedEducations(hrProfile?.Educations);" class="education-container">
                       <div class="education-item">
                         <div class="img vertical-align institute-logo" style="padding-bottom: 60px; align-items: start;">
-                          <img width="36" height="36" loading="lazy" src="http://localhost:5164/Univeristy_Default/UniveristyDefault.jpg" alt="{{education.University}}" class="ng-star-inserted">
+                          <img width="36" height="36" loading="lazy" src="http://localhost:5164/Univeristy_Default/defaults.jfif" alt="{{education.University}}" class="ng-star-inserted">
                         </div>
                         <div class="education-details">
                           <div class="title"> {{education.Faculty}}, {{education.University}} </div>
-                          <p><i class="fa-solid fa-graduation-cap"></i>{{education.Degree}}</p>
+                          <p><i class="fa-solid fa-graduation-cap"></i> {{education.Degree}}</p>
                           <div class="education-time">
                             <span class="calendar-icon"><i class="fa-solid fa-calendar-day"></i></span> {{getYearFromDate(education.StartDate)}} - {{getYearFromDate(education.EndDate)}}
                           </div>
@@ -470,17 +491,17 @@
               </div>
               <div *ngIf="hrProfile?.Experiences?.length > 0" class="card mb-4">
                 <div class="profile-section">
-                  <h2 class="fw-bold">Work Experience</h2>
+                  <h5 >Work Experience</h5>
                   <div>
                     <!-- Corrected *ngFor directive -->
                     <div *ngFor="let experience of getLimitedExperiences(hrProfile.Experiences);" class="education-container">
                       <div class="education-item">
                         <div class="img vertical-align institute-logo" style="padding-bottom: 60px; align-items: start;">
-                          <img width="36" height="36" loading="lazy" src="http://localhost:5164/Univeristy_Default/UniveristyDefault.jpg" alt="{{experience.Organization}}" class="ng-star-inserted">
+                          <img width="36" height="36" loading="lazy" src="http://localhost:5164/Univeristy_Default/defaultforcompany.jfif" alt="{{experience.Organization}}" class="ng-star-inserted">
                         </div>
                         <div class="education-details">
                           <div class="title"> {{experience.FieldOfStudy}} </div>
-                          <p><i class="bi bi-buildings-fill"></i>{{experience.Organization}}</p>
+                          <p><i class="bi bi-buildings-fill"></i> {{experience.Organization}}</p>
                           <div class="education-time">
                             <span class="calendar-icon"><i class="fa-solid fa-calendar-day"></i></span> {{getYearFromDate(experience.StartDate)}} - {{getYearFromDate(experience.EndDate)}}
                           </div>
@@ -507,7 +528,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="mb-4">Similar HRs</h2>
+            <h5 class="mb-4">Similar HRs</h5>
           </div>
         </div>
         <div class="row gy-4 justify-content-sm-center">
@@ -527,9 +548,9 @@
                   <div class="d-flex flex-column gap-2">
                     <div>
                       <div class="d-flex align-items-center gap-2">
-                        <h3 class="mb-0">
+                        <h5 class="mb-0">
                           <a [routerLink]="['/hrs',hr.ID]" class="text-reset">{{hr.FirstName}} {{hr.LastName}}</a>
-                        </h3>
+                        </h5>
                         <span>
                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-patch-check-fill text-success" viewBox="0 0 16 16">
