--- a/src/app/modules/hr/Components/schedule/schedule.component.html
+++ b/src/app/modules/hr/Components/schedule/schedule.component.html
@@ -55,7 +55,7 @@
           <span class="text-danger">{{ priceError }}</span>
         </div>
         <div class="col-2">
-          <label>L.E</label>
+          <label>$</label>
         </div>
       </div>
 
