--- a/src/app/modules/mentor/components/mentorlayout/mentorlayout.component.css
+++ b/src/app/modules/mentor/components/mentorlayout/mentorlayout.component.css
@@ -121,3 +121,24 @@
   }
 
 }
+
+
+/* 
+@media (min-width: 997px) and (max-width: 1193px) {
+  .col-lg-8{
+    width: 75%;
+  }
+} */
+/* @media (min-width:980px) and (max-width: 997px) {
+  .col-lg-8{
+    width: 75%;
+  }
+}
+@media  (max-width: 764px) {
+  .col-lg-8{
+    width: 90% !important;
+  }
+  .col-md-8{
+    width: 90% !important;
+  }
+} */
