--- a/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
+++ b/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
@@ -1,43 +1,48 @@
-<div class="">
-  <div class="">
-    <div class="card border-1 rounded-3 border-secondray">
-      <div class="card-header d-lg-flex justify-content-between align-items-center">
-        <div class="mb-3 mb-lg-0">
-          <h3 class="mb-0">My Queries </h3>
-          <p class="mb-0">Here is a list of questions/queries that developers have asked you</p>
-        </div>
+<div class="container">
+  <div class="card border-1 rounded-3 border-secondary">
+    <div class="card-header d-lg-flex justify-content-between align-items-center">
+      <div class="mb-3 mb-lg-0">
+        <h3 class="mb-0">My Queries</h3>
+        <p class="mb-0">Here is a list of questions/queries that developers have asked you</p>
       </div>
-      @for(query of userQueries; track $index){
+    </div>
+    
+    <!-- Loop through user queries -->
+    <ng-container *ngFor="let query of userQueries; let i = index;">
       <div class="card-body">
         <div class="border-bottom pt-0 pb-0">
           <div class="row mb-0">
-            <!-- <div class="col-lg-8 col-md-8 col-7 mb-0 mb-lg-0"> -->
-            <div class="col-9  mb-0 mb-lg-0">
-
+            <div class="col-9 mb-0 mb-lg-0">
               <div class="row">
-                <span class="me-0 position-relative mt-4 justify-content-end align-items-end mt-n5 col-lg-3 col-12">
-                  <img src="http://localhost:5164/{{query.UserImageUrl}}" class="avatar-xl  border border-4 border-white"
-                    style="height: 150px; size: 5px; width: 100%; border-radius: 13px;" alt="avatar">
-                </span>
-                <span class="d-block  col-lg-9 col-12 mt-0 mb-0">
-                  <div class="d-flex ">
-                    <span class="h4 pe-3 " style="font-size: 30px;">{{ query.FirstName }} {{ query.LastName }}</span>
+                <!-- User Image -->
+                <div class="col-lg-3 col-12 mt-0 mb-2">
+                  <img [src]="'http://localhost:5164/' + query.UserImageUrl"
+                    class="avatar-xl border border-4 border-white rounded" alt="avatar" 
+                    style="height: 150px; width: 100%; border-radius: 13px;">
+                    <!-- <img src="avatar-1.jpg"
+                    class="avatar-xl border border-4 border-white " alt="avatar" 
+                    style=" width: 100%; border-radius: 13px;"> -->
+                </div>
+
+                <!-- User Info and Query -->
+                <div class="col-lg-9 col-12 mt-0 mb-0">
+                  <div class="d-flex">
+                    <span class="h4 pe-3" style="font-size: 30px;">
+                      {{ query.FirstName }} {{ query.LastName }}
+                    </span>
                   </div>
-                  <span class="col-10 pt-3  ">
-                    <div class="d-flex align-text-center">
-                      <h4 class="text-muted mt-0 ms-0 pt-0 ms-2  align-text-center" style="font-size: 26px !important; "> Query :
-                      </h4>
-                      <p class="ms-0 pt-2 align-text-center" style="font-size: 23px !important;">{{ query.Question }}</p>
-                    </div>
-                  </span>
-                </span>
+                  <div class="d-flex align-items-center pt-3">
+                    <h4 class="" style="font-size: 26px; font-weight:400;">Query: </h4>
+                    <p class="ms-2 text-muted" style="font-size: 16px;">{{ query.Question }}</p>
+                  </div>
+                </div>
               </div>
             </div>
-            <!-- <div class="col-lg-2 col-md-12 col-12 d-lg-flex align-items-start justify-content-end"> -->
-            <div class="col-3 d-lg-flex align-items-start justify-content-end">
 
-              <a class="btn btn-outline-primary btn-sm"
-                [routerLink]="['/profile/answer-query', query.Instructor_Id, query.Id,query.User_Id]"
+            <!-- Answer Button -->
+            <div class="col-3 d-flex align-items-start justify-content-end">
+              <a class="btn btn-outline-primary btn-sm" 
+                [routerLink]="['/profile/answer-query', query.Instructor_Id, query.Id, query.User_Id]"
                 style="border-radius: 25px;">
                 Answer this query
               </a>
@@ -45,7 +50,6 @@
           </div>
         </div>
       </div>
-      }
-    </div>
+    </ng-container>
   </div>
 </div>
