--- a/src/app/modules/developer/Components/about-us/about-us.component.html
+++ b/src/app/modules/developer/Components/about-us/about-us.component.html
@@ -233,8 +233,10 @@ About END -->
     <!-- Title -->
     <div class="inner-container-small text-center mb-4 mb-sm-6">
       <h2>Admins</h2>
-      <p class="mb-0">We are a close-knit squad of exceptionally talented individuals who are passionate about to create
-        special community to help you.</p>
+          <p class="mb-0">
+            We are a close-knit squad of exceptionally 
+            talented individuals who are passionate about to create
+            special community to help you.</p>
     </div>
 
     <!-- Team list START -->
