--- a/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
+++ b/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
@@ -1,55 +1,47 @@
-<div class="container">
-  <div class="card border-1 rounded-3 border-secondary">
-    <div class="card-header d-lg-flex justify-content-between align-items-center">
-      <div class="mb-3 mb-lg-0">
-        <h3 class="mb-0">My Queries</h3>
+<div class="container-fluid">
+  <div class="card shadow border-0 rounded-4">
+    <div class="card-header bg text-white d-lg-flex justify-content-between align-items-center rounded-top-4">
+      <div class="header-content">
+        <h3 class="mb-0" style="color: black; font-size: bold;">My Queries From Developer</h3>
         <p class="mb-0">Here is a list of questions/queries that developers have asked you</p>
       </div>
     </div>
-    
+
     <!-- Loop through user queries -->
     <ng-container *ngFor="let query of userQueries; let i = index;">
-      <div class="card-body">
-        <div class="border-bottom pt-0 pb-0">
-          <div class="row mb-0">
-            <div class="col-9 mb-0 mb-lg-0">
-              <div class="row">
-                <!-- User Image -->
-                <div class="col-lg-3 col-12 mt-0 mb-2">
-                  <img [src]="'http://localhost:5164/' + query.UserImageUrl"
-                    class="avatar-xl border border-4 border-white rounded" alt="avatar" 
-                    style="height: 150px; width: 100%; border-radius: 13px;">
-                    <!-- <img src="avatar-1.jpg"
-                    class="avatar-xl border border-4 border-white " alt="avatar" 
-                    style=" width: 100%; border-radius: 13px;"> -->
-                </div>
+      <div class="card-body my-3 rounded shadow p-3">
+        <div class="pb-3">
+          <div class="row align-items-center">
+            <!-- <div class="card-body query-card">
+           <div class="row align-items-center"> -->
+            <!-- User Image -->
+            <div class="col-lg-2 col-12">
+              <!-- <img [src]="'http://localhost:5164/' + query.UserImageUrl"
+              class="avatar-xl" alt="avatar"> -->
+              <img src="avatar-2.jpg" class="avatar-xl" alt="avatar">
+            </div>
 
-                <!-- User Info and Query -->
-                <div class="col-lg-9 col-12 mt-0 mb-0">
-                  <div class="d-flex">
-                    <span class="h4 pe-3" style="font-size: 30px;">
-                      {{ query.FirstName }} {{ query.LastName }}
-                    </span>
-                  </div>
-                  <div class="d-flex align-items-center pt-3">
-                    <h4 class="" style="font-size: 26px; font-weight:400;">Query: </h4>
-                    <p class="ms-2 text-muted" style="font-size: 16px;">{{ query.Question }}</p>
-                  </div>
+            <!-- User Info and Query -->
+            <div class="col-lg-6 col-12">
+              <div class="user-info">
+                <span class="user-name">{{ query.FirstName }} {{ query.LastName }}</span>
+                <div class="query-text">
+                  <strong>Query: </strong>
+                  <span>{{ query.Question }}</span>
                 </div>
               </div>
             </div>
 
             <!-- Answer Button -->
-            <div class="col-3 d-flex align-items-start justify-content-end">
-              <a class="btn btn-outline-primary btn-sm" 
-                [routerLink]="['/profile/answer-query', query.Instructor_Id, query.Id, query.User_Id]"
-                style="border-radius: 25px;">
+            <div class="col-lg-3 text-end">
+              <a class="btn custom-btn"
+                [routerLink]="['/profile/answer-query', query.Instructor_Id, query.Id, query.User_Id]">
                 Answer this query
               </a>
             </div>
           </div>
         </div>
-      </div>
+        </div>
     </ng-container>
   </div>
 </div>
