--- a/src/app/modules/admin/adminsidebar/adminsidebar.component.html
+++ b/src/app/modules/admin/adminsidebar/adminsidebar.component.html
@@ -14,17 +14,17 @@
           <a class="nav-link" routerLink="/admin/Quizes" routerLinkActive="active">Quizes</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/admin/Reviews" routerLinkActive="active">Reviews</a>
+          <a class="nav-link" routerLink="/admin/reviews" routerLinkActive="active">Reviews</a>
       </li>
       <li class="nav-item">
           <a class="nav-link" routerLink="/admin/contacts" routerLinkActive="active">List of contacts</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/admin/skills" routerLinkActive="active">Add skills </a>
+          <a class="nav-link" routerLink="/admin/addskills" routerLinkActive="active">Add skills </a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
           <a class="nav-link" routerLink="/admin/Role" routerLinkActive="active">Change Role</a>
-      </li>
+      </li> -->
       <li class="nav-item-button">
           <button class="nav-link fw-bold text-bg-danger ">log out</button>
       </li>
