--- a/src/app/modules/developer/Components/query-answer/query-answer.component.html
+++ b/src/app/modules/developer/Components/query-answer/query-answer.component.html
@@ -112,7 +112,7 @@
                                                         (click)="downloadFile(userQueries.File)">
                                                         Download File
                                                      </a> -->
-                                                     <button (click)="downloadFile(userQueries.File)" class="btn btn-outline-primary btn-sm ms-0 col-4 " 
+                                                     <button (click)="downloadFile(userQueries.File)" class="btn btn-outline-primary btn-sm ms-0 col-4 me-5 " 
                                                      style="width: fit-content; height: fit-content; border-radius: 20px;" > Download
                                                            File</button>  
                                                      <!-- <a class="btn btn-outline-primary btn-sm ms-0 col-4 "
@@ -176,7 +176,7 @@
                                                         (click)="downloadFile(answer.FilePath)">
                                                         Download File
                                                      </a> -->
-                                                     <button (click)="downloadFile(answer.FilePath)" class="btn btn-outline-primary btn-sm ms-0 col-4 " 
+                                                     <button (click)="downloadFile(answer.FilePath)" class="btn btn-outline-primary btn-sm ms-0 col-4 me-5" 
                                                      style="width: fit-content; height: fit-content; border-radius: 20px;" > Download
                                                            File</button> 
                                                     }
@@ -251,7 +251,7 @@
                                                         (click)="downloadFile(answer.FilePath)">
                                                         Download File
                                                      </a> -->
-                                                     <button (click)="downloadFile(answer.FilePath)" class="btn btn-outline-primary btn-sm ms-0 col-4 " 
+                                                     <button (click)="downloadFile(answer.FilePath)" class="btn btn-outline-primary btn-sm ms-0 col-4 me-5" 
                                                      style="width: fit-content; height: fit-content; border-radius: 20px;" > Download
                                                            File</button> 
                                                     <!-- <a class="btn btn-outline-primary btn-sm ms-0 col-4 "
