--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -9,8 +9,7 @@
         <div class="card login-card shadow-sm">
           <div class="card-body">
             <img src="logo 3_processed.jpg" class="card-image">
-            <h1 class="text-center mb-4 your-element-class"
-             >Sign up
+            <h1 class="text-center mb-4 your-element-class">Sign up
             </h1>
 
 
@@ -20,20 +19,29 @@
               <div class="signup-form">
                 <!-- <h2 class="text-center">Sign up</h2> -->
                 <form [formGroup]="form" (ngSubmit)="send()">
-                  <div class="form-group form-custom" style="margin-bottom: 20px !important; margin-left: 10px;margin-right: 10px;width:fit-content; line-height: fit-content; ">
+                  <!-- <div class="form-group form-custom"
+                    style="margin-bottom: 20px !important; margin-left: 10px;margin-right: 10px;width:fit-content; line-height: fit-content; ">
                     <h1 class="text-center m-0 p-0" style="font-size: 18px;">Your Role</h1>
                     <button type="button" (click)="setRole('Developer')">Developer</button>
                     <button type="button" (click)="setRole('HR')"> HR</button>
                     <button type="button" (click)="setRole('Mentor')">Mentor</button>
 
 
+                  </div> -->
+                  <div class="form-group form-custom text-center">
+                    <h1 class="text-center m-0 p-0" style="font-size: 18px;">Your Role</h1>
+                    <div class="role-buttons ">
+                      <button type="button" class="button_r " (click)="setRole('Developer')">Developer</button>
+                      <button type="button" class="button_r "  (click)="setRole('HR')">HR</button>
+                      <button type="button" class="button_r "  (click)="setRole('Mentor')">Mentor</button>
+                    </div>
                   </div>
                   <div class="form-group">
                     <label for="email">Email address</label>
                     <input formControlName="Email" type="email" class="form-control" [ngClass]="{
-            'is-valid': form.controls['Email'].valid,
-            'is-invalid': form.controls['Email'].invalid && form.controls['Email'].dirty
-            }">
+                                'is-valid': form.controls['Email'].valid,
+                                'is-invalid': form.controls['Email'].invalid && form.controls['Email'].dirty
+                                }">
                     <div class="valid-feedback">
                       Looks good!
                     </div>
@@ -153,10 +161,22 @@
                     <button type="button" (click)="setRole('HR')"> HR</button>
                     <button type="button" (click)="setRole('Mentor')">Mentor</button>
                   </form> -->
-
-                  <button type="submit" [disabled]="form.invalid"
+                  <!-- <div class="form-group form-custom text-center">
+                   
+                    <div class="sign-up-button">
+                      <button type="submit" >Sign Up</button>
+                    </div>
+                  </div> -->
+                  <div class="form-group form-custom text-center">
+                    <!-- Other form fields -->
+                    <div class="sign-up-button-container">
+                      <button type="submit" class="sign-up-button button_s">Sign Up</button>
+                    </div>
+                  </div>
+                  
+                  <!-- <button type="submit" [disabled]="form.invalid"
                     class="form-group mt-4 ps-4 btn btn-primary btn-block ms-4 text-center justify-content-center">Sign
-                    Up</button>
+                    Up</button> -->
 
                   <p class="text-center mt-3">
                     Already have an account?
